feat: add documentation to GetProducts endpoint
