# backend/docs/swagger.json
@@ -15,6 +15,33 @@
     "basePath": "/",
     "paths": {
         "/api/stock": {
+            "get": {
+                "description": "Get the list of all available products",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stock"
+                ],
+                "summary": "Get Products list",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/usecase.GetProductOutput"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new product and merge it to stock",
                 "consumes": [
@@ -81,6 +108,26 @@
                     "type": "string"
                 },
                 "expiration_date": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "usecase.GetProductOutput": {
+            "type": "object",
+            "properties": {
+                "creation_date": {
+                    "type": "string"
+                },
+                "expiration_date": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "name": {
