# backend/internal/webserver/handlers/stock.go
@@ -85,6 +85,14 @@ func (h *StockHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	return
 }
 
+// GetProducts godoc
+// @Summary 			Get Products list
+// @Description 		Get the list of all available products
+// @Tags 				stock
+// @Produce 			json
+// @Success 			200	{object}	[]usecase.GetProductOutput
+// @Failure 			500	{object}	Response
+// @Router 				/api/stock [get]
 func (h *StockHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	var output []usecase.GetProductOutput
 	w.Header().Set("Content-Type", "application/json")
